Closed Bug 387594 Opened 18 years ago Closed 18 years ago

Kill old gfx code in nsIWidget

Categories

(Core :: Widget, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: xfsunoles, Assigned: xfsunoles)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007071008 Firefox/3.0a7pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007071008 Firefox/3.0a7pre Remove all the old, dead gfx code from nsIWidget. I had a patch for it. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Attachment #271736 - Flags: review?
Attachment #271736 - Flags: review?
Attachment #271736 - Flags: review?(roc)
Jonathan, if you have a patch that's reviewed and needs to be checked in, you can add the "checkin-needed" keyword to the bug and someone will check in the patch for you.
Status: UNCONFIRMED → NEW
Component: General → Widget
Ever confirmed: true
Keywords: checkin-needed
Product: Firefox → Core
QA Contact: general → general
Version: unspecified → Trunk
Assignee: nobody → xfsunoles
Checked in patch v1.0. Clearing checkin-needed keyword.
Keywords: checkin-needed
Attachment #271736 - Attachment description: Patch v 1.0 → Patch v 1.0 (checked in)
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: