Bug 387594 - Kill old gfx code in nsIWidget. Patch by Jonathan Steele <xfsunoles@gmail.com>. r+sr=roc.